; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_labpc.c_labpc_ai_convert_period.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_labpc.c_labpc_ai_convert_period.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_cmd = type { i64, i64, i32, i32 }

@TRIG_TIMER = common dso_local global i64 0, align 8
@MODE_SINGLE_CHAN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.comedi_cmd*)* @labpc_ai_convert_period to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @labpc_ai_convert_period(%struct.comedi_cmd* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.comedi_cmd*, align 8
  store %struct.comedi_cmd* %0, %struct.comedi_cmd** %3, align 8
  %4 = load %struct.comedi_cmd*, %struct.comedi_cmd** %3, align 8
  %5 = getelementptr inbounds %struct.comedi_cmd, %struct.comedi_cmd* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @TRIG_TIMER, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %29

10:                                               ; preds = %1
  %11 = load %struct.comedi_cmd*, %struct.comedi_cmd** %3, align 8
  %12 = call i64 @labpc_ai_scan_mode(%struct.comedi_cmd* %11)
  %13 = load i64, i64* @MODE_SINGLE_CHAN, align 8
  %14 = icmp eq i64 %12, %13
  br i1 %14, label %15, label %25

15:                                               ; preds = %10
  %16 = load %struct.comedi_cmd*, %struct.comedi_cmd** %3, align 8
  %17 = getelementptr inbounds %struct.comedi_cmd, %struct.comedi_cmd* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* @TRIG_TIMER, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %25

21:                                               ; preds = %15
  %22 = load %struct.comedi_cmd*, %struct.comedi_cmd** %3, align 8
  %23 = getelementptr inbounds %struct.comedi_cmd, %struct.comedi_cmd* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  store i32 %24, i32* %2, align 4
  br label %29

25:                                               ; preds = %15, %10
  %26 = load %struct.comedi_cmd*, %struct.comedi_cmd** %3, align 8
  %27 = getelementptr inbounds %struct.comedi_cmd, %struct.comedi_cmd* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %2, align 4
  br label %29

29:                                               ; preds = %25, %21, %9
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}

declare dso_local i64 @labpc_ai_scan_mode(%struct.comedi_cmd*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
